CMF 2.0.1-beta (unreleased)

  Bug Fixes

    - CMFCore.CMFBTreeFolder: CMFBTreeFolders could not be used as the
      toplevel /Members container. 
      (http://www.zope.org/Collectors/CMF/441)

    - Fixed DST-driven test breakage in CMFCalendar by adding an optional
      'zone' argument to the DublineCore methods which return string
      rednitions of date metadata.
     (http://www.zope.org/Collectors/CMF/476)

    - Fixed test failures due to changes in TALES expression parsing under
      Zope 2.10.

    - CMFCore.ActionInformation: don't use a fixed set of properties for
      ActionInformation. (http://www.zope.org/Collectors/CMF/232/)

    - CMFCore.CatalogTool: Use current executable's proxy roles, if any,
      in place of user's roles when computing 'allowedRolesAndUsers' for
      a query. (http://www.zope.org/Collectors/CMF/380)

    - CMFCore.FSDTMLMethod: Add class-default '_owner', to prevent unintended
      acquisition of ownership (http://www.zope.org/Collectors/CMF/450)

    - CMFCore.CatalogTool: Added 'cmf_uid' method to IndexableObjectWrapper
      so that CMFUid UIDs are not acquired during indexing.
      (http://www.zope.org/Collectors/CMF/446)

    - CMFCore.PortalContent:  '_guessAliases' may leave type information
      with a default alias of '(Default)';  work around that case.
      (http://www.zope.org/Collectors/CMF/445)

    - Forward-ported fix for DCWorkflow global actions missing IDs.
      (http://www.zope.org/Collectors/CMF/308)

    - CMFCore Expression: Fixed 'request' provided by expression contexts.
      'request' was not set correctly if 'object' is not specified.

    - CMFCore.exportimport.typeinfo:  Added BBB support for really old
      typeinfo instances which still return mappings instead of ActionInfos.

    - standard_error_message.pt was out of sync with Zope.
      (http://www.zope.org/Collectors/Zope/2133)

    - CMFCore.DynamicType: Fixed behaviour regarding default view.