@@ -1,1 +1,1 @@
-CMF-2.0.0
+CMF-2.0.0+
