@@ -2,6 +2,9 @@ CMF 2.0.1-beta (unreleased)
 
   Bug Fixes
 
+    - Backported test fix from 2.1 branch which suppresses race conditions
+      in date-based topic criteria tests.
+
     - CMFCore.CMFBTreeFolder: CMFBTreeFolders could not be used as the
       toplevel /Members container. 
       (http://www.zope.org/Collectors/CMF/441)
@@ -9,7 +12,7 @@ CMF 2.0.1-beta (unreleased)
     - Fixed DST-driven test breakage in CMFCalendar by adding an optional
       'zone' argument to the DublineCore methods which return string
       rednitions of date metadata.
-     (http://www.zope.org/Collectors/CMF/476)
+      (http://www.zope.org/Collectors/CMF/476)
 
     - Fixed test failures due to changes in TALES expression parsing under
       Zope 2.10.
